2006-01-19  Ethan Merritt  <merritt@u.washington.edu>

	* src/color.c src/color.h src/gadgets.c src/gadgets.h: Move color_box
	structure and associated definitions from color.* to gadgets.*. This
	resolves a circular header dependency if the structure is to be shared
	by 2D and 3D code. Add (struct position) entries to color_box structure
	to generalize the placement options.

	* src/command.c src/command.h src/gadgets.c src/gadgets.h: Move the
	related TBOOLEAN flags is_3d_plot and is_cb_plot from command.* to
	gadgets.*.

	* src/save.c src/show.c src/set.c src/unset.c: Convert the relevant
	routines to manipulate color_box position using new (struct position)
	fields.

	* docs/gnuplot.doc: Document that color_box placement can now be
	specified in any of gnuplot's coordinate systems.

2006-01-15  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Correct various typos and spelling errors.

2006-01-13  Ethan Merritt  <merritt@u.washington.edu>

	* term/emf.trm: EMF_filled_polygon has the side-effect of
	changing the current line color.  Force re-evaluation of line
	properties the next time a line is drawn.

2006-01-13  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* demo/rainbow.dem:  Do not "unset mouse" inside demo.

2006-01-12  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Avoid improper call to strcpy found by valgrind.

	* term/emf.trm: Allow terminal to use LT_BACKGROUND as a line or
	fill color.

	* term/xlib.trm (Xlib_reset): Give xlib its own reset function,
	because sharing one with x11 can lead to a double-free of the
	output file, resulting in a segfault (found by valgrind).

2006-01-11  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot3d.c (get3d_data):  Fix initialization code for 3D plot
	style `with vectors`.

2005-01-07  Mike Sutton  <mws116@usa.com>

	* term/gd.trm: New terminal option {rounded|butt} controls line caps.

	* src/color.c (draw_color_smooth_box): In splot in view map mode, have